[package]
name = "github_commit_info"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
custom-utils = "0.10.21"
[profile.release]
strip = true
lto = true
